<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:text="@string/text_create_reminder"
        android:textSize="24sp"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_reminder_date"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_reminder_datetime"
            android:background="@drawable/et_design"
            android:layout_width="196dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:inputType="date"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_reminder_text"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_reminder_text"
            android:background="@drawable/et_design"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:inputType="textMultiLine"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reminder_create"
            android:background="@drawable/btn_design"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/text_create_reminder" />

    </LinearLayout>

</FrameLayout>